Re-sized 'Dark mode" button to correctly justify-content on phone devices

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -99,7 +99,9 @@ hr{
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    padding-top: 20px;
+    justify-content: center;
+    gap: 30px;
 }
 .bottomHeader text{
     font-weight: 700;
